--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
           Chess Reader
       </h1>
       <p> This web-app reads chess moves via browser extension and provides real-time stockfish analysis.</p>
+      <p> test update pls ignore</p>
       <div>
           <h2>Last Move: <pre id = 'moves'> </pre> </h2> 
       </div>
