fixed duplicate detection of moves

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,11 @@
           Chess Reader
       </h1>
       <p> This web-app reads chess moves via browser extension and provides real-time stockfish analysis.</p>
+
+        <div id="conditionalDiv" style="display: block;">
+          <p>place holder</p>
+      </div>
+
       <div>
           <h2>Last Move: <pre id = 'moves'> </pre> </h2> 
       </div>
