removed uneeded files and code. added documentation when possible

--- a/client/index.html
+++ b/client/index.html
@@ -11,14 +11,9 @@
            crossorigin="anonymous"></script>
   </head>
   <body>
-      <h1>
-          Chess Reader
-      </h1>
-      <p> This web-app reads chess moves via browser extension and provides real-time stockfish analysis.</p>
-
-        <div id="conditionalDiv" style="display: block;">
-          <p>place holder</p>
-      </div>
+        <div>
+          <h3 id="statusHeader">Connection Status:</h3> <p id="statusText"></p> 
+        </div>
 
       <div>
           <h2>Last Move: <pre id = 'moves'> </pre> </h2> 
@@ -30,5 +25,5 @@
 
     </div>
       <script src="client.js"></script>
-  </body>
+  </body> 
 </html>
